build(linux): Create debian package with jpackage